# mean-tests

./: AGENTS.md  README.md  mean-tests-20-80.toml  mean-tests.toml  pyproject.toml
configs/: default.toml  large-scale.toml  small-alpha.toml  smaller-alpha.toml  smaller-diff.toml  stronger-skewness.toml  unbalanced-ratio.toml
reports/: default.md  large-scale.md  mean-tests-20-80.md  mean-tests.md  simulation.md  smaller-alpha.md  smaller-diff.md  stronger-skewness.md  unbalanced-ratio.md
src/mean_tests/: __init__.py  config.py  metrics.py  sample.py  simulation.py  utils.py
